--- a/android-basic-with-kotlin/app/src/main/res/values/strings.xml
+++ b/android-basic-with-kotlin/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">android-basic-with-kotlin</string>
+    <string name="hello_android_kotlin">Hello Android Kotlin</string>
+    <string name="click_me">CLICK ME</string>
 </resources>
