--- a/eWallet/app/src/main/res/values/strings.xml
+++ b/eWallet/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">Welups</string>
-    <string name="title_splash">WELUPS Blockchain Wallet</string>
-    <string name="version_app">Welups Wallet - Version 1.0.4</string>
+    <string name="app_name">eWallet</string>
+    <string name="title_splash">eWallet Blockchain Wallet</string>
+    <string name="version_app">Electronic Wallet - Version 1.0.4</string>
     <string name="title_on_boarding1">Privacy &amp; Security</string>
     <string name="content_on_boarding1">Privacy and security for your transactions.</string>
     <string name="get_started">GET STARTED</string>
