--- a/vnCalling/app/src/main/res/values/strings.xml
+++ b/vnCalling/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">vnCalling</string>
+    <string name="recently">Gần đây</string>
+    <string name="contact_list">Danh bạ</string>
+    <string name="personal">Cá nhân</string>
 </resources>
