--- a/vnCalling/app/src/main/res/values/strings.xml
+++ b/vnCalling/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="resend_otp"><u>RESEND OTP</u></string>
     <string name="don_t_receive_the_otp">Don\'t receive the OTP?</string>
     <string name="verify_proceed"><![CDATA[VERIFY & PROCEED]]></string>
+    <string name="add_image">ADD IMAGE</string>
 </resources>
