--- a/android-knowledges/google-services/machine-learning-kit/app/src/main/res/values/strings.xml
+++ b/android-knowledges/google-services/machine-learning-kit/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">MachineLearningKit</string>
+    <string name="text_recognition">Text recognition</string>
+    <string name="image_labeling">Image labeling</string>
+    <string name="barcode_scanning">Barcode scanning</string>
+    <string name="face_detection">Face detection</string>
+    <string name="landmark_recognition">Landmark recognition</string>
 </resources>
