--- a/AndroidAppsForDevs/Calendar/app/src/main/res/values/strings.xml
+++ b/AndroidAppsForDevs/Calendar/app/src/main/res/values/strings.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Calendar</string>
     <string name="previous">Go to previous</string>
     <string name="next">Go to next</string>
     <string name="calendar">Calendar</string>
-    <string name="app_name">Material CalendarView Samples</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_basic">Basic Example</string>
