--- a/AndroidAppsForDevs/Notes/app/src/main/res/values/strings.xml
+++ b/AndroidAppsForDevs/Notes/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="note_title">Note Title</string>
     <string name="note_subtitle">Note Subtitle</string>
     <string name="type_note_here">Type note here...</string>
+    <string name="search_text">Search</string>
+    <string name="note_title_text">Enter Title</string>
+    <string name="note_content">Enter Content</string>
+    <string name="notes_date">Today\'s Date</string>
 </resources>
