--- a/AndroidDevelopmentCourses/app/src/main/res/values/strings.xml
+++ b/AndroidDevelopmentCourses/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="commonly_used_android_templates"><u>Commonly Used Android Templates</u></string>
     <string name="commonly_used_android_libraries"><u>Commonly Used Android Libraries</u></string>
     <string name="libraries">Libraries</string>
+    <string name="_1_docs">1. docs</string>
+    <string name="_2_demo">2. demo</string>
+    <string name="recyclerview_tutorial">Recyclerview Tutorial</string>
+    <string name="_1_recyclerview_linear_horizontal">1.Recyclerview Linear Horizontal</string>
+    <string name="_2_recyclerview_linear_vertical">2.Recyclerview Linear Vertical</string>
 </resources>
