--- a/MultiApplicationProject/app/src/main/res/values/strings.xml
+++ b/MultiApplicationProject/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MultiApplication</string>
+    <string name="multi_application">Multi-application</string>
 </resources>
